# gatiab

./: CHANGELOG.txt  README.md  environment.yml  pyproject.toml
gatiab/: __init__.py  gatiab.py
tests/: test_gatiab.py
tests/S3A_OLCI_rsrf/: B00_rsrf_S3A_OLCI.nc  B01_rsrf_S3A_OLCI.nc  B02_rsrf_S3A_OLCI.nc  B03_rsrf_S3A_OLCI.nc  B04_rsrf_S3A_OLCI.nc  B05_rsrf_S3A_OLCI.nc  B06_rsrf_S3A_OLCI.nc  B07_rsrf_S3A_OLCI.nc  B08_rsrf_S3A_OLCI.nc  B09_rsrf_S3A_OLCI.nc  B10_rsrf_S3A_OLCI.nc  B11_rsrf_S3A_OLCI.nc  B12_rsrf_S3A_OLCI.nc  B13_rsrf_S3A_OLCI.nc  B14_rsrf_S3A_OLCI.nc  B15_rsrf_S3A_OLCI.nc  B16_rsrf_S3A_OLCI.nc  B17_rsrf_S3A_OLCI.nc  B18_rsrf_S3A_OLCI.nc  B19_rsrf_S3A_OLCI.nc  B20_rsrf_S3A_OLCI.nc
